RESOLVED FIXED199321
REGRESSION (r239984): pages with custom scrollbars also show normal scrollbars
https://bugs.webkit.org/show_bug.cgi?id=199321
Summary REGRESSION (r239984): pages with custom scrollbars also show normal scrollbars
Simon Fraser (smfr)
Reported 2019-06-28 09:46:09 PDT
and we paint the scrollbars on the main thread, causing flickering.
Attachments
Patch (4.80 KB, patch)
2019-06-28 10:48 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-06-28 09:46:21 PDT
Simon Fraser (smfr)
Comment 2 2019-06-28 10:05:53 PDT
theme().registerScrollbar(*this), called from Scrollbar's constructor, is trying to call virtual functions which RenderScrollbar overrides.
Simon Fraser (smfr)
Comment 3 2019-06-28 10:48:50 PDT
WebKit Commit Bot
Comment 4 2019-06-28 13:23:18 PDT
Comment on attachment 373131 [details] Patch Clearing flags on attachment: 373131 Committed r246934: <https://trac.webkit.org/changeset/246934>
WebKit Commit Bot
Comment 5 2019-06-28 13:23:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.