REGRESSION (r239984): pages with custom scrollbars also show normal scrollbars https://bugs.webkit.org/show_bug.cgi?id=199321 <rdar://problem/52308095>

Reviewed by Timothy Hatcher.

Revert the part of r239984 that made isCustomScrollbar() virtual, since theme().registerScrollbar()
calls it from the base class constructor.

I wasn't able to make a test that tests rendering of overlay scrollbars (webkit.org/b/199323).

* platform/Scrollbar.cpp:
(WebCore::Scrollbar::Scrollbar):
* platform/Scrollbar.h:
(WebCore::Scrollbar::isCustomScrollbar const):
* rendering/RenderScrollbar.cpp:
(WebCore::RenderScrollbar::RenderScrollbar):
* rendering/RenderScrollbar.h:


Canonical link: https://commits.webkit.org/213265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246934 268f45cc-cd09-0410-ab3c-d52691b4dbfc